third_party/rust/chromium_crates_io/vendor/cxx-1.0.121/tests/ui/deny_elided_lifetimes.stderr
error: hidden lifetime parameters in types are deprecated
  --> tests/ui/deny_elided_lifetimes.rs:21:50
   |
21 |         fn lifetime_elided(s: &i32) -> UniquePtr<Cpp>;
   |                                                  ^^^ expected lifetime parameter
   |
note: the lint level is defined here
  --> tests/ui/deny_elided_lifetimes.rs:1:9
   |
1  | #![deny(elided_lifetimes_in_paths)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
help: indicate the anonymous lifetime
   |
21 |         fn lifetime_elided(s: &i32) -> UniquePtr<Cpp<'_>>;
   |                                                     ++++
